PB-4646 - Fix tooltip keyinspector on keyid dropdown alignment

--- a/src/less/pages/settings.less
+++ b/src/less/pages/settings.less
@@ -53,6 +53,13 @@
       }
     }
   }
+
+  .profile-key-inspector-information {
+    .input.select.tooltip-top {
+      display: inline-block;
+    }
+  }
+
   .key-export {
     .actions {
       margin: 1em 0;
